Fix SVG icon not displaying on iPhone 12 (iOS 14.4.2)

--- a/src/components/crossDevice/ClientSuccess/style.scss
+++ b/src/components/crossDevice/ClientSuccess/style.scss
@@ -1,17 +1,18 @@
 @import '../../Theme/constants';
 
+/*
+ * NOTE: iOS Safari has a strange bug where SVG background images are not displayed on some iOS devices
+ *       if margin, background image properties are not declared in a specific order together & before background-image
+ *       ref: http://geoffmuskett.com/strange-bug-on-ios-svg-background-images-no-showing/
+ */
 .icon {
   @extend %icon-circle-background;
+  background-size: contain;
+  background-position: center;
+  background-image: url('./assets/return-to-computer-large.svg');
   height: 144 * $unit;
   width: 144 * $unit;
-  /*
-   * NOTE: iOS Safari has a strange bug where SVG background images are not displayed on some iOS devices
-   *       if margin, background image properties are not declared before the background-image
-   *       ref: http://geoffmuskett.com/strange-bug-on-ios-svg-background-images-no-showing/
-   */
   margin: 50 * $unit auto;
-  background-size: contain;
-  background-image: url('./assets/return-to-computer-large.svg');
 }
 
 .text {
